# modest

./: .clang-tidy  .gitignore  CMakeLists.txt  COPYRIGHT  Dockerfile  Jenkinsfile  LICENSE.txt  README.md  requirements.txt
.github/ISSUE_TEMPLATE/: bug.md
.github/workflows/: build.yml
c++/triqs_modest/: CMakeLists.txt  chargedensity.hpp  checkpoint.hpp  degenerate_blocks.hpp  density.cpp  density.hpp  dft_code_specific.hpp  double_counting.cpp  double_counting.hpp  downfolding.cpp  downfolding.hpp  embedding.cpp  embedding.hpp  gloc_fixed_grid.hpp  h5.cpp  hamiltonians.cpp  hamiltonians.hpp  ibz_symmetry_ops.hpp  impurity_model.cpp  impurity_model.hpp  lattice_gf_helpers.hpp  loaders.cpp  loaders.hpp  local_space.cpp  local_space.hpp  obe_tb.cpp  obe_tb.hpp  postprocess.cpp  postprocess.hpp  printing.cpp  root_finder.hpp  triqs_modest.cpp  triqs_modest.hpp
doc/: CMakeLists.txt  conf.py.in
jenkins/: Dockerfile  Jenkinsfile
packaging/: CMakeLists.txt  TRIQS-modest-foss-2021b.eb.in
python/app4triqs/: CMakeLists.txt  app4triqs_module.cpp  app4triqs_module.wrap.cxx  app4triqs_module.wrap.hxx  module.cpp  module.wrap.cxx  module.wrap.hxx
python/triqs_modest/: CMakeLists.txt  __init__.py  atomic_levels_and_delta.cpp  atomic_levels_and_delta.toml  atomic_levels_and_delta.wrap.cxx  atomic_levels_and_delta.wrap.hxx  embedding.cpp  embedding.toml  embedding.wrap.cxx  embedding.wrap.hxx  hamiltonians.cpp  hamiltonians.toml  hamiltonians.wrap.cxx  hamiltonians.wrap.hxx  local_gf.cpp  local_gf.toml  local_gf.wrap.cxx  local_gf.wrap.hxx  misc.cpp  misc.toml  misc.wrap.cxx  misc.wrap.hxx  module.cpp  module.toml  module.wrap.cxx  module.wrap.hxx  obe.cpp  obe.toml  obe.wrap.cxx  obe.wrap.hxx  obe_tb.cpp  obe_tb.toml  obe_tb.wrap.cxx  obe_tb.wrap.hxx  post_processing.cpp  post_processing.toml  post_processing.wrap.cxx  post_processing.wrap.hxx  rho_and_mu.cpp  rho_and_mu.toml  (+10 more)
python/triqs_modest/dft_driver/: __init__.py  driver.py
python/triqs_modest/dft_tools/: __init__.py
python/triqs_modest/dft_tools/elk/: __init__.py  converter.py
python/triqs_modest/dft_tools/elk/elktools/: __init__.py  elk_converter_tools.py  getpmatelk.py  readElkfiles.py
python/triqs_modest/dft_tools/hk/: __init__.py  converter.py
python/triqs_modest/dft_tools/qe/: __init__.py  converter.py
python/triqs_modest/dft_tools/vasp/: __init__.py  converter.py
python/triqs_modest/dft_tools/vasp/plovasp/: elstruct.py  inpconf.py  lintetra.py  plotools.py  proj_shell.py  sc_dmft.py  vaspio.py
python/triqs_modest/dft_tools/wannier90/: __init__.py
python/triqs_modest/dft_tools/wien2k/: __init__.py  converter.py
python/triqs_modest/solver_interfaces/: __init__.py  cthyb.py  ctseg.py  ctseg_utils.py  postprocessing.py  utils.py
python/triqs_modest/utils/: __init__.py  analyze_gfs.cpp  analyze_gfs.toml  analyze_gfs.wrap.cxx  analyze_gfs.wrap.hxx  checkpoint.py  dc.cpp  dc.toml  dc.wrap.cxx  dc.wrap.hxx  file_io.cpp  file_io.toml  file_io.wrap.cxx  file_io.wrap.hxx
share/: CMakeLists.txt  app4triqs.modulefile.in
test/: CMakeLists.txt
test/c++/: .gitattributes  CMakeLists.txt  basic.cpp  charge_update.cpp  checkpoint_test.cpp  common.hpp  dc_solver_test.cpp  deg_blocks.cpp  density_test.cpp  dft_data_test.cpp  embed_desc_test.cpp  genrefdata.py  gloc_test.cpp  hamiltonians_test.cpp  hloc0_test.cpp  impurity_model_test.cpp  load_data_test.cpp  mpi_test.cpp  obe_tb.cpp  obe_tb_test.cpp  unitary_matrix.hpp
test/c++/dft_data/: genrefdata.py
test/c++/ref_data/: SrVO3-cubic-t2g-eg.ref.h5  SrVO3-cubic-t2g.ref.h5  genrefdata.py  lco_qe_dp_w90_grid.ref.h5  lco_wannier.ref.h5  nio.ref.h5  svo-wien2k.ref.h5  u_matrix_slater.ref.h5  umatrix.py
test/c++/ref_data_lfs/: la327-1313-p30-w90-fixedgrid.ref.h5  la327-2222-strain-w90-fixedgrid.ref.h5  la5ni3o11-wien2k-large-mesh.ref.h5  liv2o4-r-3m-strained-wien2k.ref.h5  moocl2-dimer-w90-fix-grid.ref.h5  sr2mgoso6-wien2k-soc.ref.h5  sriro3-wien2k-soc.ref.h5  svo_t2g.h5  svo_t2g_w90_fixedgrid.ref.h5
test/c++/utility/: streams.cpp
test/python/: .gitattributes  Basic.py  CMakeLists.txt  nio_afm_vasp_full.ref.h5  nio_afm_vasp_ibz.ref.h5  svo_vasp_full.ref.h5  svo_vasp_ibz.ref.h5  test_ibz_vasp.py
test/python/dft_tools/: CMakeLists.txt
test/python/dft_tools/elk/: CMakeLists.txt  elk_bands_convert.py  elk_convert.py  elk_equiv_convert.py  elk_spectralcontours_convert.py  elk_transport_convert.py
test/python/dft_tools/hk/: CMakeLists.txt  hk_convert.py
test/python/dft_tools/vasp/atm/: test_atm.py
test/python/dft_tools/vasp/converter/: lunio3.ref.h5  nio.ref.h5  pg_output.ref.h5  svo.cfg  svo.ref.h5  test_converter_lunio3.py  test_converter_nio.py  test_converter_one_site.py  test_converter_svo.py
test/python/dft_tools/vasp/converter/svo/: vaspout.h5
test/python/dft_tools/vasp/inpconf/: test_general.py  test_groups.py  test_input.py  test_parameter_set.py  test_shells.py  test_special_parsers.py
test/python/dft_tools/vasp/plotools/: test_consistency.py
test/python/dft_tools/vasp/proj_group/: test_block_map.py  test_one_site.py  test_one_site_compl.py  test_select_bands.py  test_two_site.py
test/python/dft_tools/vasp/proj_shell/: test_projshells.py
test/python/dft_tools/vasp/vaspio/: test_doscar.py  test_eigenval.py  test_kpoints.py  test_poscar.py
test/python/dft_tools/wannier90/: CMakeLists.txt  w90_convert_LaVO3.py  w90_convert_SrVO3_col.py  w90_convert_SrVO3_soc.py  w90_convert_SrVO3_t2g_col.py
test/python/dft_tools/wannier90/w90_convert/: LaVO3-Pbnm.inp  LaVO3-Pbnm_hloc_diag.ref.h5  LaVO3-Pnma.inp  LaVO3-Pnma_ef.inp  LaVO3-Pnma_lambda.ref.h5  LaVO3-Pnma_wannier.ref.h5  SrVO3_col.LOCPROJ  SrVO3_col.OUTCAR  SrVO3_col.eig  SrVO3_col.inp  SrVO3_col.nnkp  SrVO3_col.wout  SrVO3_col_band.kpt  SrVO3_col_blochbasis.ref.h5  SrVO3_col_u.mat  SrVO3_col_u_dis.mat  SrVO3_col_wannierbasis.ref.h5  SrVO3_soc.inp  SrVO3_soc.ref.h5  SrVO3_t2g_col.inp  SrVO3_t2g_col_lambda.ref.h5
test/python/dft_tools/wannier90/w90_optics/: sro.chk  sro.eig  sro.inp  sro.mmn  sro.wout
test/python/dft_tools/wien2k/: CMakeLists.txt  wien2k_convert.py
(+42 files in other folders)
